--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.0",
-    "nodemailer": "^6.7.2",
+    "multer": "^1.4.4",
+    "nanoid": "^3.2.0",
+    "nodemailer": "^6.7.2"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.15"
   }
 }
